@@ -89,6 +89,18 @@ namespace tgui
 
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    /// @brief Changes the blink rate of the cursor in edit fields such as EditBox and TextBox
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    TGUI_API void setEditCursorBlinkRate(unsigned int blinkRateMilliseconds);
+
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    /// @brief Returns the blink rate of the cursor in edit fields such as EditBox and TextBox
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+    TGUI_API unsigned int getEditCursorBlinkRate();
+
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     /// @brief Sets a new resource path
     ///
     /// This pathname is placed in front of every filename that is used to load a resource.
