@@ -4,6 +4,7 @@ TGUI 0.8.8  (TBD)
 - Added RightClicked signal to TreeView ([PR #125](https://github.com/texus/TGUI/pull/125))
 - Changed the keyboard shortcuts in EditBox and TextBox for macOS
 - Added getIndexById and getIdByIndex to ListBox
+- Added global setEditCursorBlinkRate function
 
 
 TGUI 0.8.7  (8 February 2020)
